--- a/app/src/main/res/layout/big_notification.xml
+++ b/app/src/main/res/layout/big_notification.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:background="#000000"
         android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/imageViewAlbumArt"
+            android:padding="5dp"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@mipmap/ic_launcher" />
@@ -19,13 +22,16 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="#000000"
             android:orientation="vertical"
-            android:padding="5dp" >
+             >
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:background="#000000"
+                >
 
                 <TextView
                     android:id="@+id/textSongName"
@@ -37,7 +43,7 @@
                     android:textColor="@android:color/white"
                     android:textSize="20dp"/>
 
-                <Button
+                <ImageButton
                     android:id="@+id/btnDelete"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
@@ -53,43 +59,44 @@
                 android:singleLine="true"
                 android:textColor="#C0C0C0"
                 android:textSize="15dp" />
+            <TextView
+                android:id="@+id/textArtistName"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:textColor="#C0C0C0"
+                android:textSize="15dp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:divider="@drawable/mydivider"
-                android:dividerPadding="12.0dip"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:showDividers="middle" >
+                android:background="#000000"
+                 >
 
-                <Button
+                <ImageButton
                     android:id="@+id/btnPrevious"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="5dp"
-                    android:background="@mipmap/ic_prev" />
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@mipmap/ic_prev"
+                    android:layout_gravity="left"/>
 
-                <Button
-                    android:id="@+id/btnPause"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="5dp"
-                    android:background="@mipmap/ic_pause" />
-                <Button
+                <ImageButton
                     android:id="@+id/btnPlay"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="5dp"
-                    android:background="@mipmap/ic_play"
-                    android:visibility="gone" />
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:background="#00000000"
+                    />
 
-                <Button
+                <ImageButton
                     android:id="@+id/btnNext"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="5dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="right"
                     android:background="@mipmap/ic_next"/>
             </LinearLayout>
         </LinearLayout>
